<?xml version="1.0"?>
<package format="2">
  <name>moma_bringup</name>
  <version>0.0.0</version>
  <description>The moma_bringup package</description>
  <maintainer email="mbreyer@ethz.ch">Michel Breyer</maintainer>
  <maintainer email="fjulian@ethz.ch">Julian Foerster</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>panda_moveit_config</depend>
  <depend>royalpanda_moveit_config</depend>
  <depend>moma_description</depend>
  <depend>franka_gazebo</depend>
</package>
