<?xml version="1.0"?>
<package format="2">
  <name>moma_gazebo</name>
  <version>0.0.0</version>
  <description>The moma_gazebo package</description>

  <maintainer email="michel.breyer@mavt.ethz.ch">Michel Breyer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>moma_description</depend>
  <depend>panda_moveit_config</depend>
  <depend>roboticsgroup_gazebo_plugins</depend>

</package>
