<package format="2">
  <name>moma_moveit_utils</name>
  <version>2.2.2</version>
  <description>
    Utilities to use with moveit
  </description>
  <author email="grizzi@ethz.ch">Giuseppe Rizzi</author>
  <maintainer email="grizzi@ethz.ch" />

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
</package>
