<?xml version="1.0"?>
<package format="2">
  <name>moma_robot</name>
  <version>0.0.0</version>
  <description>The MoMa robot package.</description>

  <maintainer email="jukeller@ethz.ch">Julian Keller</maintainer>

  <license>TODO</license>

  <author email="jukeller@ethz.ch">Julian Keller</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rosparam</exec_depend>
  <exec_depend>moma_description</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>path_passthrough_controller</exec_depend>
  <exec_depend>moma_joint_space_controller</exec_depend>
  <exec_depend>moma_joint_velocity_controller</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
