<?xml version="1.0"?>
<package format="2">
    <name>move_panda</name>
    <version>0.0.0</version>
    <description>move panda with moveit commander</description>

    <maintainer email="lucyalisonharris@gmail.com">Lucy Harris</maintainer>
    <license>GNU GPL</license>

    <author>Lucy Harris</author>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>

</package>
