<?xml version="1.0"?>
<package format="2">
  <name>panda_control</name>
  <version>0.0.1</version>
  <description>The panda_control package</description>

  <maintainer email="michel.breyer@mavt.ethz.ch">Michel Breyer</maintainer>
  <maintainer email="julian.foerster@mavt.ethz.ch">Julian Foerster</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>libfranka</depend>
  <depend>franka_control</depend>
  <depend>franka_description</depend>
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>franka_gripper</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
