<?xml version="1.0"?>
<package format="2">
  <name>panda_control_door_opening</name>
  <version>0.7.1</version>
  <description>The panda_control_door_opening package</description>
  <maintainer email="marko@todo.todo">marko</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>franka_control</build_depend>
  <build_depend>franka_description</build_depend>
  <build_depend>franka_hw</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>libfranka</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>franka_control</build_export_depend>
  <build_export_depend>franka_description</build_export_depend>
  <build_export_depend>franka_hw</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>libfranka</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>realtime_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>controller_interface</exec_depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_hw</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>libfranka</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <controller_interface plugin="{prefix}/panda_control_door_openining_plugin.xml"/>
  </export>
</package>
