<?xml version="1.0"?>
<package format="2">
  <name>panda_control_v2</name>
  <version>0.0.1</version>
  <description>The panda_control_v2 package</description>

  <maintainer email="michel.breyer@mavt.ethz.ch">Michel Breyer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>libfranka</depend>
  <depend>franka_control</depend>
  <depend>franka_description</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
