<?xml version="1.0"?>
<package format="2">
  <name>yumi_controllers</name>
  <version>0.0.0</version>
  <description>The yumi_controllers package</description>

  <maintainer email="michel.breyer@mavt.ethz.ch">Michel Breyer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>yumi_moveit_config</depend>
 
</package>
